# cmake_template

./: README.md
IncludeDir/: CMakeLists.txt  README.md
multiDir/: CMakeLists.txt
multiDir/test/: CMakeLists.txt
multiDir/tool_lib/: CMakeLists.txt  my_lib.h
multiDri/: Readme.md
multiDri/test/: main.cpp
multiDri/tool_dll/: CMakeLists.txt  my_dll.cpp  my_dll.h
multiDri/tool_lib/: my_lib.cpp
oneDir/: CMakeLists.txt  README.md  main.cpp  tool.cpp  tool.h
